--- a/eas.json
+++ b/eas.json
@@ -10,7 +10,11 @@
     "preview": {
       "distribution": "internal",
       "android": {
-        "buildType": "apk"
+        "buildType": "apk",
+        "gradleCommand": ":app:assembleRelease"
+      },
+      "env": {
+        "EXPO_PUBLIC_API_BASE_URL": "https://earning-backend-production.up.railway.app"
       }
     },
     "production": {
