--- a/eas.json
+++ b/eas.json
@@ -15,7 +15,8 @@
       },
       "env": {
         "EXPO_PUBLIC_API_BASE_URL": "https://earning-backend-production.up.railway.app"
-      }
+      },
+      "node": "20.11.0"
     },
     "production": {
       "android": {
