--- a/app.json
+++ b/app.json
@@ -5,7 +5,9 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "userInterfaceStyle": "dark",
+    "icon": "./assets/icon.png",
     "splash": {
+      "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#0f172a"
     },
@@ -18,6 +20,7 @@
     },
     "android": {
       "adaptiveIcon": {
+        "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#0f172a"
       },
       "package": "com.nepearn.app",
@@ -27,6 +30,7 @@
       ]
     },
     "web": {
+      "favicon": "./assets/favicon.png"
     },
     "extra": {
       "apiBaseUrl": "https://earning-backend-production.up.railway.app",
