Add versionCode for Android production build

--- a/app.json
+++ b/app.json
@@ -17,6 +17,7 @@
       "bundleIdentifier": "com.nepearn.app"
     },
     "android": {
+      "versionCode": 1,
       "adaptiveIcon": {
         "backgroundColor": "#0f172a"
       },
